x11: Fix bad logic in axis check

https://bugzilla.gnome.org/show_bug.cgi?id=711540